# HSE_DataStorageSystems_FinalAssignment

./: .env  README.md  pyproject.toml
etl/: db.py  run_all.py  run_sql.py  stage_load.py  verify.py
sql/: 00_schemas.sql
